# FPLTinker

./: .gitignore  LICENSE  README.md
.VSCodeCounter/2024-08-21_20-53-35/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.github/ISSUE_TEMPLATE/: feature_request.md
api/: .env.sample  Makefile  pyproject.toml  setup.cfg  wsgi.py
api/api/: __init__.py  config.py
api/api/resources/: __init__.py  fixture.py  gameweek.py  player.py  player_stats.py  position.py  stat_details.py  team.py
api/api/resources/marshalling/: __init__.py  base_marshal.py  detailed_marshal.py  fields.py  models.py
jobs/data-updater/: .env.sample  Makefile  README.md  config.py  logging.conf  pyproject.toml  setup.cfg  update.py
jobs/data-updater/data_updater/: config.py  worker.py
jobs/data-updater/data_updater/updaters/: __init__.py  configurations.py  fdr.py  fixture_stats.py  fixtures.py  gameweeks.py  player_stats.py  players.py  positions.py  stat_details.py  teams.py
jobs/data-updater/data_updater/updaters/utils/: config_details.py  date_utilities.py  db_utilities.py  stat_details.py
jobs/data-updater/data_updater/utils/: config_details.py  date_utilities.py  db_utilities.py
jobs/data-updater/tests/: conftest.py
jobs/data-updater/tests/updaters/: test_positions.py
models/: .env.sample  Makefile  config.py  manage.py  pyproject.toml  setup.cfg
models/migrations/: env.py
models/migrations/versions/: 441b4b9fc5e8_add_unique_constraint_to_positions.py  628ad57a5e52_add_precision_to_player_stats.py  687a81484bb8_make_season_columns_nullable.py  6cec9828deda_remove_timestamps_from_some_stat_tables.py  77a166b6cfab_add_season_to_player_stats.py  7abb62dc2072_initial_migration.py  891580dfdb26_add_fdr_table.py  922abbe6544e_add_unique_constraint_on_player_stats.py  a38dc19f6106_implement_fixture_stats_table.py  bc190cfbc015_update_gameweek_to_support_timestamp.py  bc190cfbc015_update_gameweek_to_support_timestamp_.py  c2cfd4d8096d_add_gameweek_relationship_on_fixture.py  c99e5c4a209a_update_top_player_for_a_gameweek.py  e5c85bd667cb_update_unique_key_on_teams.py  ed2b633cfd35_initial_migration.py  edd961afb15c_add_configurations_table.py
models/models/: __init__.py  base.py  configuration.py  db.py  fdr.py  fixture.py  fixture_stat.py  fixture_stats.py  gameweek.py  player.py  player_stats.py  position.py  stat_detail.py  stat_details.py  stats.py  team.py  tinker.py  weighting.py
models/models/utils/: date_utilities.py  mappings.py  stat_descriptors.py  stat_details.py
models/tests/: __init__.py  conftest.py  test_configuration.py  test_fdr.py  test_fixture.py  test_fixture_stats.py  test_gameweek.py  test_player.py  test_player_stats.py  test_position.py  test_stat_details.py  test_team.py  test_tinker.py  test_weighting.py
models/tests/utils/: test_date_utilities.py
web/: package-lock.json
web/app/: layout.tsx
