[tool.poetry]
name = "api"
version = "0.1.0"
description = "Api for the fpltinker.team app"
authors = ["Leo Dube <leo.s.dube@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.3"
python-dotenv = "^1.0.1"
psycopg2 = "^2.9.9"
models = { path = "../models" }
flask-restx = "^1.3.0"


[tool.poetry.group.dev.dependencies]
pylint = "^3.2.6"
isort = "^5.13.2"
black = "^24.8.0"
flake8 = "^7.1.1"
flake8-bugbear = "^24.4.26"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
