[tool.poetry]
name = "models"
version = "0.1.0"
description = "Contains the common data models for the FPL Tinker backend."
authors = ["Leo Dube <leo.s.dube@gmail.com>"]
readme = "README.md"
packages = [{ include = "models" }, { include = "migrations" }]

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.3"
flask-sqlalchemy = "^3.1.1"
alembic = "^1.13.2"
sqlalchemy = "^2.0.32"
psycopg2 = "^2.9.9"
flask-migrate = "^4.0.7"
deepdiff = "^8.0.1"

[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
pylint = "^3.2.6"
isort = "^5.13.2"
flake8 = "^7.1.1"
flake8-bugbear = "^24.4.26"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.2"
pytest-mock = "^3.14.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
