[tool.poetry]
name = "data-updater"
version = "0.1.0"
description = "Daily cron-job that imports data from the FPL api."
authors = ["Leo Dube <leo.s.dube@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.3"
fpl = "^0.6.35"
asyncio = "^3.4.3"
models = {path = "../../models"}
psycopg2 = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
