[tool.poetry]
name = "data-updater"
version = "0.1.0"
description = "Daily cron-job that imports data from the FPL api."
authors = ["Leo Dube <leo.s.dube@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.3"
asyncio = "^3.4.3"
aiohttp = "^3.10.5"
psycopg2 = "^2.9.9"
python-dotenv = "^1.0.1"
models = { path = "../../models" }
fpl = { git = "https://github.com/leodube/fpl.git" }


[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
pylint = "^3.2.6"
isort = "^5.13.2"
flake8 = "^7.1.1"
flake8-bugbear = "^24.4.26"
pytest-asyncio = "^0.24.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
